--- a/customer-service/tsconfig.json
+++ b/customer-service/tsconfig.json
@@ -7,6 +7,8 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
