--- a/customer-service/package.json
+++ b/customer-service/package.json
@@ -12,6 +12,8 @@
     "dev": "yarn prepare && concurrently \"yarn watch\" \"yarn start\""
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.0",
+    "@grpc/proto-loader": "^0.7.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
