--- a/proxy-service/package.json
+++ b/proxy-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proxy-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
