--- a/libs/shared/package.json
+++ b/libs/shared/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "release": "standard-version",
-    "publish": "rm -rf dist && tsc && pnpm publish --access public --no-git-checks"
+    "build": "rm -rf dist && tsc",
+    "publish": "pnpm build && pnpm publish --access public --no-git-checks"
   },
   "keywords": [],
   "author": "",
