add event bus and outbox pattern

--- a/libs/shared/package.json
+++ b/libs/shared/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
+    "bullmq": "^5.56.3",
+    "ioredis": "^5.6.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.16.1",
     "prettier": "^3.6.2"
